button text align fix

--- a/frontend/src/App/Header.css
+++ b/frontend/src/App/Header.css
@@ -46,7 +46,7 @@
 .Header .Today-button button{
     display: flex;
     justify-content: center;
-    align-content: center;
+    align-items: center;
     width: 90px;
     height: 36px;
     background: white;
